Fix : Overflow

--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,10 @@
   user-select: none;
 }
 
+html{
+  overflow: hidden;
+}
+
 *::-webkit-scrollbar {
   display: none;
 }
